# sqlalchemy-cockroachdb

./: .gitignore  .gitmodules  .python-version  CHANGES.md  Dockerfile  Makefile  README.asyncpg.md  README.md  README.psycopg.md  README.read_committed.md  README.testing.SQLAlchemy.md  README.testing.md  bootstrap.sh  circle.yml  cockroach_helper.sh  dev-requirements.in  dev-requirements.txt  dev-requirements.txt.in  docker-compose.yml  learning_how_to_operate_with_git.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  test-requirements.txt.in  tox.ini
.github/workflows/: ci.yml
cockroach/: call.py  errors.py  http_sender.py  interface.py  kv.py  methods.py  test_call.py  test_client.py  test_http_sender.py  test_kv.py  test_txn_sender.py  test_util.py  txn_sender.py  util.py
cockroach/django/: base.py  features.py  operations.py  schema.py
cockroach/proto/: api_pb2.py  config_pb2.py  data_pb2.py  errors_pb2.py  gossip_pb2.py  heartbeat_pb2.py  internal_pb2.py  log_pb2.py  status_pb2.py  (+1 more)
sqlalchemy_cockroachdb/: __init__.py  _psycopg_common.py  asyncpg.py  base.py  ddl_compiler.py  provision.py  psycopg.py  psycopg2.py  requirements.py  stmt_compiler.py  transaction.py
test/: conftest.py  test_aaa_run_transaction_session.py  test_aab_run_transaction_core.py  test_across_schema.py  test_column_reflect.py  test_introspection.py  test_json.py  test_run_transaction_core.py  test_run_transaction_session.py  test_suite.py  test_suite_alembic.py  test_suite_sqlalchemy.py  test_timestampdiff.py  test_with_hint.py
(+28 files in other folders)
