[project]
name = "sqlalchemy-cockroachdb"
version = "2.0.3.dev0"
license="http://www.apache.org/licenses/LICENSE-2.0"
description = ""
authors = [
    {name = "Cockroach Labs",email = "cockroach-db@googlegroups.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.poetry.group.dev.dependencies]
alembic = "1.15.2"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
attrs = "25.3.0"
futures = "3.0.5"
greenlet = "3.1.1"
iniconfig = "2.1.0"
mako = "1.3.9"
markupsafe = "3.0.2"
mock = "5.2.0"
more-itertools = "10.6.0"
packaging = "24.2"
pluggy = "1.5.0"
psycopg = "3.2.6"
psycopg2 = "2.9.10"
py = "1.11.0"
pytest = "7.1.3"
tomli = "2.2.1"
typing-extensions = "4.13.1"

[tool.pytest.ini_options]
addopts = "--tb native -v -r sfxX --maxfail=250 -p warnings -p logging --strict-markers"
markers = [
    "backend: tests that should run on all backends; typically dialect-sensitive",
    "mypy: mypy integration / plugin tests",
]
